# stock-market-words

./: .gitignore  CLAUDE.md  CLEANUP_SUMMARY.md  CODEBASE_CLEANUP_RECOMMENDATIONS.md  IMPLEMENTATION_SUMMARY.md  README.md  TESTING.md  Taskfile.yml  eslint.config.js  index.html  index.xml  package-lock.json  package.json  playwright.config.js  sitemap.xml
.githooks/: pre-commit
.github/: copilot-instructions.md
about/: index.html
acceptance-tests/: package-lock.json  package.json
articles/: index.html  index.xml
categories/: index.html  index.xml
contact/: index.html
css/: ticker-highlight.css
data/: filtered_tickers.json  index.html  (+8 more)
python3/: QUICK_START.md  README.md  TESTING_SETUP.md  cli.py  pyproject.toml  pytest.ini  requirements.txt  run.sh  schema.sql  test.sh
python3/migrations/: 001_deprecate_sync_history.sql  002_add_sector_industry.sql  003_expand_daily_metrics.sql  004_translate_jobs.sql  005_reit_radar.sql  006_add_business_summary.sql  007_capture_all_yahoo_finance.sql  README.md
python3/scripts/: lint_sql.py
python3/sql/: rollback_by_run_id_execute.sql  rollback_by_run_id_preview.sql
python3/src/stock_ticker/: __init__.py  __main__.py  backup.py  builders.py  cli.py  config.py  database.py  download_strategies.py  extractors.py  ftp_sync.py  hugo_generators.py  logging_setup.py  migrations.py  retry.py  translate.py  utils.py  vpn_rotator.py
python3/tests/: README.md  __init__.py  conftest.py  test_builders.py  test_cli.py  test_database.py  test_extractors.py  test_hugo_generators.py  test_translate.py  test_utils.py
(+6041 files in other folders)
